[package]
name = "shifting"
version = "0.1.0"
edition = "2021"
#workspace = "/home/dika/Documents/github/shifting/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"

[[bin]]
name = "main"

[[bin]]
name = "test"

